@@ -33,10 +33,10 @@ SuggestionGenerator * SuggestionGeneratorFactory::getSuggestionGenerator(
 	string backend = voikkoOptions->dictionary.getSuggestionBackend();
 	if (backend == "FinnishSuggestionStrategy(currentAnalyzer)") {
 		if (suggestionType == SUGGESTION_TYPE_OCR) {
-			return new SuggestionStrategyOcr(voikkoOptions->morAnalyzer);
+			return new SuggestionStrategyOcr(voikkoOptions->morAnalyzer, 1000);
 		}
 		else {
-			return new SuggestionStrategyTyping(voikkoOptions->morAnalyzer);
+			return new SuggestionStrategyTyping(voikkoOptions->morAnalyzer, 350);
 		}
 	} else if (backend == "null") {
 		return new SuggestionGeneratorNull();
