@@ -22,18 +22,33 @@ using namespace std;
 
 namespace libvoikko { namespace spellchecker { namespace suggestion {
 
-SuggestionStrategy::SuggestionStrategy() {
-}
+SuggestionStrategy::SuggestionStrategy(size_t maxCost) :
+	maxCost(maxCost) { }
 
 SuggestionStrategy::~SuggestionStrategy() {
 	list<SuggestionGenerator *>::iterator i = generators.begin();
 	for (; i != generators.end(); ++i) {
 		delete *i;
 	}
+	i = primaryGenerators.begin();
+	for (; i != primaryGenerators.end(); ++i) {
+		delete *i;
+	}
 }
 
 void SuggestionStrategy::generate(SuggestionStatus * s) const {
-	list<SuggestionGenerator *>::const_iterator i = generators.begin();
+	s->setMaxCost(this->maxCost);
+
+	list<SuggestionGenerator *>::const_iterator i = primaryGenerators.begin();
+	for (; i != primaryGenerators.end() && !s->shouldAbort(); ++i) {
+		(*i)->generate(s);
+	}
+	if (s->getSuggestionCount() > 0) {
+		// suggestion generated by primary generator, skip other generators.
+		return;
+	}
+
+	i = generators.begin();
 	for (; i != generators.end() && !s->shouldAbort(); ++i) {
 		(*i)->generate(s);
 	}
